Implement the aggregate (summary) mode

--- a/man/qtop.1
+++ b/man/qtop.1
@@ -31,6 +31,9 @@ history span for finished jobs [24]
 \fB\-S\fR
 include array subjobs
 .TP
+\fB\-a\fR
+run in the aggregate (summary) mode (implies \fB\-S\fR)
+.TP
 \fB\-R\fR \fIsecs\fR
 set refresh period \fIsecs\fR [30]
 .TP
