--- a/man/qtop.1
+++ b/man/qtop.1
@@ -57,7 +57,8 @@ Use Arrow up/down (or k/j), Page up/down, Home, and End to navigate the list.
 Use Arrow right/left to scroll the screen horizontally, if needed.
 .P
 By default, the list is automatically refreshed every 30 seconds. Press "r" to
-force a refresh.
+force a refresh. To pause the automatic refresh, press "p"; press "p" again to
+unpause.
 .P
 Press "q" to exit.
 .P
